<resources>
    <string name="app_name">ShareBook</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="short_1">添加电影</string>
    <string name="long_1">添加电影</string>
    <string name="dis_1">添加电影</string>
    <string name="short_2">我的收藏</string>
    <string name="long_2">我的收藏</string>
    <string name="dis_2">我的收藏</string>
    <string name="savefail">保存失败</string>
    <string name="save_piecture">保存图片</string>
    <string name="savesuccess" >图片成功保存至%smul</string>
</resources>
